data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1700.wast
;; 1. **Test Description**: Use a `br_if` instruction inside a loop, where the loop condition is based on a variable. Set the variable to zero and verify that the loop continues without branching.    - **Constraint Checked**: Ensures that the conditional check on the variable (i32 value) correctly evaluates to false.    - **Relation to Incorrect Evaluation**: Detects if the condition is improperly evaluated, always causing the branch to be taken even when the condition should be false.

(assert_invalid
  (module
    (func (loop
      (i32.const 0)
      (br_if 0 (i32.const 0))
      (br 1)
    ))
  )
  "type mismatch"
)